# encrypted-stochastic-gd

./: .gitmodules  CMakeLists.txt  README.md
data/: train.data  train.labels
src/: linear-model-generator.cpp  linear-model-generator.h  main.cpp  sgd.cpp  sgd.h
